<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2872c9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_body">

        <TextView
            android:id="@+id/textView_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account  "
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:padding="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_title"
        tools:layout_editor_absoluteY="213dp">


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/nameUser"
            android:textColor="#2872C9"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/user_name"
            android:textColor="#2872C9"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUsername"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textViewEditEmail"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="#2872C9"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputUsername" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEditEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_gmail_com"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#2872C9"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="*******"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword" />

        <TextView
            android:id="@+id/textViewAsking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#2872C9"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/textViewAskingLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_signin">

        </TextView>

        <TextView
            android:id="@+id/textViewAskingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:text="@string/log_in"
            android:textColor="#2872C9"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAsking"
            app:layout_constraintTop_toBottomOf="@id/button_signin">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>