<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFF"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2872c9"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:padding="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/layout_input"
        android:background="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewEditEmail"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_margin="60dp"
            android:text="@string/email"
            android:textColor="#2872C9"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEditEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_gmail_com"
                android:textSize="15sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#2872C9"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="*******"
                android:inputType="textPassword"
                android:textSize="15sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword" />

        <TextView
            android:id="@+id/textViewAsking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#2872C9"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@id/textViewAskingLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login">

        </TextView>

        <TextView
            android:id="@+id/textViewAskingLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="80dp"
            android:text="@string/sign_in"
            android:textColor="#2872C9"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAsking"
            app:layout_constraintTop_toBottomOf="@id/button_login">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>