<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2872C9"
    android:id="@+id/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/layout_white"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#2872C9">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_back_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/txtProfile"
            android:layout_width="310dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:text="Profile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewBack"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <ImageView
            android:id="@+id/logout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:src="@drawable/logout"
            app:layout_constraintStart_toEndOf="@id/txtProfile"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-16dp"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="150dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/img_profile_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </de.hdodenhof.circleimageview.CircleImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="@id/layout_white">

            <TextView
                android:id="@+id/textViewEditUsername"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:text="First Name"
                android:textColor="#2872C9"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUsername"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEditUsername">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewEditEmail"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:text="@string/email"
                android:textColor="#2872C9"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textInputUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textInputEmail">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEditEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_gmail_com"
                    android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_password"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="#2872C9"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputEmail">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*******"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/rounded_button_blue"
                android:paddingTop="10dp"
                android:text="save changes"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputPassword">
            </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>